--- a/experiments/2022-03-14-fixed-mut/analysis/2022-03-14-fixed-mut-landscaping.Rmd
+++ b/experiments/2022-03-14-fixed-mut/analysis/2022-03-14-fixed-mut-landscaping.Rmd
@@ -17,6 +17,7 @@ library(ggplot2)
 library(scales)
 library(cowplot)
 library(RColorBrewer)
+library(viridis)
 source("https://gist.githubusercontent.com/benmarwick/2a1bb0133ff568cbe28d/raw/fb53bd97121f7f9ce947837ef1a4c65a73bffb3f/geom_flat_violin.R")
 ```
 
@@ -136,6 +137,88 @@ ls1_cooccur_data$env_type_label <- mapply(
 )
 ```
 
+Load 1-step mutant phenotype distance distributions
+
+```{r}
+ls1_phen_dists_data_loc <- paste0(working_directory, "data/mutant_phenotype_distances_step-1.csv")
+ls1_phen_dists_data <- read.csv(ls1_phen_dists_data_loc, na.strings="NONE")
+
+ls1_phen_dists_data$COPY_MUT_PROB <- as.factor(
+  ls1_phen_dists_data$COPY_MUT_PROB
+)
+ls1_phen_dists_data$env_chg_rate <- as.factor(
+  ls1_phen_dists_data$env_chg_rate
+)
+ls1_phen_dists_data$env_condition <- as.factor(
+  ls1_phen_dists_data$env_condition
+)
+ls1_phen_dists_data$env_type <- as.factor(
+  ls1_phen_dists_data$env_type
+)
+ls1_phen_dists_data$distance <- factor(
+  ls1_phen_dists_data$distance,
+  levels=c(
+    -1,
+    0,
+    1,
+    2,
+    3,
+    4,
+    5,
+    6
+  )
+)
+
+# Hacky/inefficient way to assign rep_ids based on replicate_id ordering
+ls1_simplify_replicate_id <- function(e, m, rep_id) {
+  treatment_data <- filter(
+    ls1_phen_dists_data,
+    (env_condition==e) & (COPY_MUT_PROB==m)
+  )
+  rep_ids <- as.integer(levels(factor(treatment_data$replicate_id)))
+  rep_id_map <- as.data.frame(rep_ids)
+  rep_id_map$order <- order(rep_id_map$rep_ids)
+  return(filter(rep_id_map, rep_ids==rep_id)$order)
+}
+ls1_phen_dists_data$rep_id <- mapply(
+  ls1_simplify_replicate_id,
+  ls1_phen_dists_data$env_condition,
+  ls1_phen_dists_data$COPY_MUT_PROB,
+  ls1_phen_dists_data$replicate_id
+)
+ls1_phen_dists_data$rep_id <- as.factor(
+  ls1_phen_dists_data$rep_id
+)
+
+
+ls1_phen_dists_data$replicate_id <- as.factor(
+  ls1_phen_dists_data$replicate_id
+)
+ls1_phen_dists_data$RANDOM_SEED <- as.factor(
+  ls1_phen_dists_data$RANDOM_SEED
+)
+
+ls1_phen_dists_data$env_chg_rate_label <- mapply(
+  get_env_chg_rate_label,
+  ls1_phen_dists_data$env_chg_rate,
+  ls1_phen_dists_data$env_type
+)
+ls1_phen_dists_data$env_chg_rate_label <- factor(
+  ls1_phen_dists_data$env_chg_rate_label,
+  levels=c(
+    "none-a",
+    "none-b",
+    "30",
+    "300",
+    "3000"
+  )
+)
+ls1_phen_dists_data$env_type_label <- mapply(
+  get_env_type_label,
+  ls1_phen_dists_data$env_type
+)
+```
+
 Load 2-step landscape data
 ```{r}
 ls2_run_summary_data_loc <- paste0(working_directory, "data/landscape_run_summary_step-2.csv")
@@ -222,6 +305,87 @@ ls2_cooccur_data$env_type_label <- mapply(
   ls2_cooccur_data$env_type
 )
 ```
+
+```{r}
+ls2_phen_dists_data_loc <- paste0(working_directory, "data/mutant_phenotype_distances_step-2.csv")
+ls2_phen_dists_data <- read.csv(ls2_phen_dists_data_loc, na.strings="NONE")
+
+ls2_phen_dists_data$COPY_MUT_PROB <- as.factor(
+  ls2_phen_dists_data$COPY_MUT_PROB
+)
+ls2_phen_dists_data$env_chg_rate <- as.factor(
+  ls2_phen_dists_data$env_chg_rate
+)
+ls2_phen_dists_data$env_condition <- as.factor(
+  ls2_phen_dists_data$env_condition
+)
+ls2_phen_dists_data$env_type <- as.factor(
+  ls2_phen_dists_data$env_type
+)
+
+ls2_phen_dists_data$distance <- factor(
+  ls2_phen_dists_data$distance,
+  levels=c(
+    -1,
+    0,
+    1,
+    2,
+    3,
+    4,
+    5,
+    6
+  )
+)
+
+# Hacky/inefficient way to assign rep_ids based on replicate_id ordering
+ls2_simplify_replicate_id <- function(e, m, rep_id) {
+  treatment_data <- filter(
+    ls2_phen_dists_data,
+    (env_condition==e) & (COPY_MUT_PROB==m)
+  )
+  rep_ids <- as.integer(levels(factor(treatment_data$replicate_id)))
+  rep_id_map <- as.data.frame(rep_ids)
+  rep_id_map$order <- order(rep_id_map$rep_ids)
+  return(filter(rep_id_map, rep_ids==rep_id)$order)
+}
+ls2_phen_dists_data$rep_id <- mapply(
+  ls2_simplify_replicate_id,
+  ls2_phen_dists_data$env_condition,
+  ls2_phen_dists_data$COPY_MUT_PROB,
+  ls2_phen_dists_data$replicate_id
+)
+ls2_phen_dists_data$rep_id <- as.factor(
+  ls2_phen_dists_data$rep_id
+)
+
+ls2_phen_dists_data$replicate_id <- as.factor(
+  ls2_phen_dists_data$replicate_id
+)
+ls2_phen_dists_data$RANDOM_SEED <- as.factor(
+  ls2_phen_dists_data$RANDOM_SEED
+)
+
+ls2_phen_dists_data$env_chg_rate_label <- mapply(
+  get_env_chg_rate_label,
+  ls2_phen_dists_data$env_chg_rate,
+  ls2_phen_dists_data$env_type
+)
+ls2_phen_dists_data$env_chg_rate_label <- factor(
+  ls2_phen_dists_data$env_chg_rate_label,
+  levels=c(
+    "none-a",
+    "none-b",
+    "30",
+    "300",
+    "3000"
+  )
+)
+ls2_phen_dists_data$env_type_label <- mapply(
+  get_env_type_label,
+  ls2_phen_dists_data$env_type
+)
+```
+
 
 Load run summary data
 
@@ -316,7 +480,7 @@ ggplot(
     panel.border = element_rect(color = "grey", fill=NA, size=1.5)
   )
 ggsave(
-  paste0(working_directory, "plots/", "prop_viable_mutants_step-1.pdf")
+  paste0(working_directory, "plots/", "prop_viable_mutants_step-1.png")
 )
 ```
 
@@ -413,7 +577,7 @@ ggplot(
     panel.border = element_rect(color = "grey", fill=NA, size=1.5)
   )
 ggsave(
-  paste0(working_directory, "plots/", "num_unique_viable_phenotypes_step-1.pdf")
+  paste0(working_directory, "plots/", "num_unique_viable_phenotypes_step-1.png")
 )
 ```
 
@@ -510,7 +674,7 @@ ggplot(
   )
 
 ggsave(
-  paste0(working_directory, "plots/", "entropy_viable_phenotypes_step-1.pdf")
+  paste0(working_directory, "plots/", "entropy_viable_phenotypes_step-1.png")
 )
 ```
 
@@ -608,7 +772,7 @@ ggplot(
   )
 
 ggsave(
-  paste0(working_directory, "plots/", "avg_dist_to_ancestor_step-1.pdf")
+  paste0(working_directory, "plots/", "avg_dist_to_ancestor_step-1.png")
 )
 ```
 
@@ -660,9 +824,206 @@ ggsave(
 )
 ```
 
+
+## avg_match_chg_toward_env_b
+
+### 1-step mutants
+
+```{r}
+ggplot(
+    ls1_run_summary_data,
+    aes(
+      x=env_chg_rate_label,
+      y=avg_match_chg_toward_env_b,
+      fill=env_condition
+    )
+  ) +
+  geom_flat_violin(
+    position = position_nudge(x = .2, y = 0),
+    alpha = .8,
+    adjust=1.5
+  ) +
+  geom_point(
+    mapping=aes(color=env_condition),
+    position = position_jitter(width = .15),
+    size = .5,
+    alpha = 0.8
+  ) +
+  geom_boxplot(
+    width = .1,
+    outlier.shape = NA,
+    alpha = 0.5
+  ) +
+  scale_fill_brewer(
+    palette=cb_palette
+  ) +
+  scale_color_brewer(
+    palette=cb_palette
+  ) +
+  facet_grid(
+    COPY_MUT_PROB~env_type_label,
+    scales="free_x"
+  ) +
+  theme(
+    legend.position="none",
+    axis.text=element_text(size=14),
+    panel.border = element_rect(color = "grey", fill=NA, size=1.5)
+  )
+
+ggsave(
+  paste0(working_directory, "plots/", "avg_match_chg_toward_env_b_step-1.png")
+)
+```
+
+### 2-step mutants
+
+```{r}
+ggplot(
+    ls2_run_summary_data,
+    aes(
+      x=env_chg_rate_label,
+      y=avg_match_chg_toward_env_b,
+      fill=env_condition
+    )
+  ) +
+  geom_flat_violin(
+    position = position_nudge(x = .2, y = 0),
+    alpha = .8,
+    adjust=1.5
+  ) +
+  geom_point(
+    mapping=aes(color=env_condition),
+    position = position_jitter(width = .15),
+    size = .5,
+    alpha = 0.8
+  ) +
+  geom_boxplot(
+    width = .1,
+    outlier.shape = NA,
+    alpha = 0.5
+  ) +
+  scale_fill_brewer(
+    palette=cb_palette
+  ) +
+  scale_color_brewer(
+    palette=cb_palette
+  ) +
+  facet_grid(
+    COPY_MUT_PROB~env_type_label,
+    scales="free_x"
+  ) +
+  theme(
+    legend.position="none",
+    axis.text=element_text(size=14),
+    panel.border = element_rect(color = "grey", fill=NA, size=1.5)
+  )
+
+ggsave(
+  paste0(working_directory, "plots/", "avg_match_chg_toward_env_b_step-2.pdf")
+)
+```
+
+## num_viable_mutants_improve_env_b
+
+### 1-step mutants
+
+```{r}
+ggplot(
+    ls1_run_summary_data,
+    aes(
+      x=env_chg_rate_label,
+      y=num_viable_mutants_improve_env_b,
+      fill=env_condition
+    )
+  ) +
+  geom_flat_violin(
+    position = position_nudge(x = .2, y = 0),
+    alpha = .8,
+    adjust=1.5
+  ) +
+  geom_point(
+    mapping=aes(color=env_condition),
+    position = position_jitter(width = .15),
+    size = .5,
+    alpha = 0.8
+  ) +
+  geom_boxplot(
+    width = .1,
+    outlier.shape = NA,
+    alpha = 0.5
+  ) +
+  scale_fill_brewer(
+    palette=cb_palette
+  ) +
+  scale_color_brewer(
+    palette=cb_palette
+  ) +
+  facet_grid(
+    COPY_MUT_PROB~env_type_label,
+    scales="free_x"
+  ) +
+  theme(
+    legend.position="none",
+    axis.text=element_text(size=14),
+    panel.border = element_rect(color = "grey", fill=NA, size=1.5)
+  )
+
+ggsave(
+  paste0(working_directory, "plots/", "num_viable_mutants_improve_env_b_step-1.png")
+)
+```
+
+### 2-step mutants
+
+```{r}
+ggplot(
+    ls2_run_summary_data,
+    aes(
+      x=env_chg_rate_label,
+      y=num_viable_mutants_improve_env_b,
+      fill=env_condition
+    )
+  ) +
+  geom_flat_violin(
+    position = position_nudge(x = .2, y = 0),
+    alpha = .8,
+    adjust=1.5
+  ) +
+  geom_point(
+    mapping=aes(color=env_condition),
+    position = position_jitter(width = .15),
+    size = .5,
+    alpha = 0.8
+  ) +
+  geom_boxplot(
+    width = .1,
+    outlier.shape = NA,
+    alpha = 0.5
+  ) +
+  scale_fill_brewer(
+    palette=cb_palette
+  ) +
+  scale_color_brewer(
+    palette=cb_palette
+  ) +
+  facet_grid(
+    COPY_MUT_PROB~env_type_label,
+    scales="free_x"
+  ) +
+  theme(
+    legend.position="none",
+    axis.text=element_text(size=14),
+    panel.border = element_rect(color = "grey", fill=NA, size=1.5)
+  )
+
+ggsave(
+  paste0(working_directory, "plots/", "num_viable_mutants_improve_env_b_step-2.pdf")
+)
+```
+
 ## Number of viable mutants that gain tasks
 
-## 1-step mutants
+### 1-step mutants
 
 ```{r}
 ggplot(
@@ -706,7 +1067,7 @@ ggplot(
   )
 
 ggsave(
-  paste0(working_directory, "plots/", "num_viable_mutants_gain_tasks_step-1.pdf")
+  paste0(working_directory, "plots/", "num_viable_mutants_gain_tasks_step-1.png")
 )
 ```
 
@@ -760,7 +1121,7 @@ ggsave(
 
 ## num_viable_mutants_gain_multiple_tasks
 
-## 1-step mutants
+### 1-step mutants
 
 ```{r}
 ggplot(
@@ -809,13 +1170,67 @@ ggplot(
   )
 
 ggsave(
-  paste0(working_directory, "plots/", "num_viable_mutants_gain_multiple_tasks_step-1.pdf")
+  paste0(working_directory, "plots/", "num_viable_mutants_gain_multiple_tasks_step-1.png")
+)
+```
+
+### 2-step mutants
+
+
+```{r}
+ggplot(
+    ls2_run_summary_data,
+    aes(
+      x=env_chg_rate_label,
+      y=num_viable_mutants_gain_multiple_tasks,
+      fill=env_condition
+    )
+  ) +
+  geom_flat_violin(
+    position = position_nudge(x = .2, y = 0),
+    alpha = .8,
+    adjust=1.5
+  ) +
+  geom_point(
+    mapping=aes(color=env_condition),
+    position = position_jitter(width = .15),
+    size = .5,
+    alpha = 0.8
+  ) +
+  geom_boxplot(
+    width = .1,
+    outlier.shape = NA,
+    alpha = 0.5
+  ) +
+  scale_fill_brewer(
+    palette=cb_palette
+  ) +
+  scale_color_brewer(
+    palette=cb_palette
+  ) +
+  scale_y_continuous(
+    # trans=log10_trans()
+    trans=pseudo_log_trans(sigma=1,base=10),
+    breaks=c(0, 10, 100, 1000, 10000, 100000)
+  ) +
+  facet_grid(
+    COPY_MUT_PROB~env_type_label,
+    scales="free_x"
+  ) +
+  theme(
+    legend.position="none",
+    axis.text=element_text(size=14),
+    panel.border = element_rect(color = "grey", fill=NA, size=1.5)
+  )
+
+ggsave(
+  paste0(working_directory, "plots/", "num_viable_mutants_gain_multiple_tasks_step-2.png")
 )
 ```
 
 ## Number of viable mutants that lose tasks
 
-## 1-step mutants
+### 1-step mutants
 
 ```{r}
 ggplot(
@@ -859,7 +1274,7 @@ ggplot(
   )
 
 ggsave(
-  paste0(working_directory, "plots/", "num_viable_mutants_lose_tasks_step-1.pdf")
+  paste0(working_directory, "plots/", "num_viable_mutants_lose_tasks_step-1.png")
 )
 ```
 
@@ -957,7 +1372,7 @@ ggplot(
   )
 
 ggsave(
-  paste0(working_directory, "plots/", "num_viable_mutants_lose_multiple_tasks_step-1.pdf")
+  paste0(working_directory, "plots/", "num_viable_mutants_lose_multiple_tasks_step-1.png")
 )
 ```
 
@@ -1056,7 +1471,7 @@ ggplot(
   )
 
 ggsave(
-  paste0(working_directory, "plots/", "avg_num_tasks_lost_step-1.pdf")
+  paste0(working_directory, "plots/", "avg_num_tasks_lost_step-1.png")
 )
 ```
 
@@ -1138,6 +1553,11 @@ ggplot(
     outlier.shape = NA,
     alpha = 0.5
   ) +
+  geom_hline(
+    yintercept=0,
+    linetype="dashed",
+    size=0.5
+  ) +
   scale_fill_brewer(
     palette=cb_palette
   ) +
@@ -1155,7 +1575,7 @@ ggplot(
   )
 
 ggsave(
-  paste0(working_directory, "plots/", "total_npmi_step-1.pdf")
+  paste0(working_directory, "plots/", "total_npmi_step-1.png")
 )
 ```
 
@@ -1185,6 +1605,11 @@ ggplot(
     width = .1,
     outlier.shape = NA,
     alpha = 0.5
+  ) +
+  geom_hline(
+    yintercept=0,
+    linetype="dashed",
+    size=0.5
   ) +
   scale_fill_brewer(
     palette=cb_palette
@@ -1236,6 +1661,11 @@ ggplot(
     outlier.shape = NA,
     alpha = 0.5
   ) +
+  geom_hline(
+    yintercept=0,
+    linetype="dashed",
+    size=0.5
+  ) +
   scale_fill_brewer(
     palette=cb_palette
   ) +
@@ -1283,6 +1713,11 @@ ggplot(
     width = .1,
     outlier.shape = NA,
     alpha = 0.5
+  ) +
+  geom_hline(
+    yintercept=0,
+    linetype="dashed",
+    size=0.5
   ) +
   scale_fill_brewer(
     palette=cb_palette
@@ -1334,6 +1769,11 @@ ggplot(
     outlier.shape = NA,
     alpha = 0.5
   ) +
+  geom_hline(
+    yintercept=0,
+    linetype="dashed",
+    size=0.5
+  ) +
   scale_fill_brewer(
     palette=cb_palette
   ) +
@@ -1381,6 +1821,11 @@ ggplot(
     width = .1,
     outlier.shape = NA,
     alpha = 0.5
+  ) +
+  geom_hline(
+    yintercept=0,
+    linetype="dashed",
+    size=0.5
   ) +
   scale_fill_brewer(
     palette=cb_palette
@@ -1432,7 +1877,7 @@ ggplot(
     legend.key.width=unit(3, "cm")
   )
 ggsave(
-  paste0(working_directory, "plots/", "npmi_matrices_step-1.pdf"),
+  paste0(working_directory, "plots/", "npmi_matrices_step-1.png"),
   height=15,
   width=12
 )
@@ -1468,5 +1913,66 @@ ggsave(
   paste0(working_directory, "plots/", "npmi_matrices_step-2.pdf"),
   height=15,
   width=12
+)
+```
+
+## Distribution of mutant phenotypes
+
+### 1-step mutants
+
+```{r}
+ggplot(
+    # filter(ls1_phen_dists_data, env_condition=="env-consta"),
+    ls1_phen_dists_data,
+    aes(
+      x=rep_id,
+      y=count_env_a,
+      fill=distance
+    )
+  ) +
+  geom_bar(position="stack", stat="identity") +
+  scale_fill_viridis(discrete=TRUE, direction=-1) +
+  facet_grid(
+    env_condition~COPY_MUT_PROB,
+    scales="free_x"
+  ) +
+  theme(
+    legend.position="bottom",
+    axis.text.x=element_text(size=10)
+  )
+ggsave(
+  paste0(working_directory, "plots/", "mutant_phen_dist_env_a_step-1.pdf"),
+  width=15,
+  height=18
+)
+
+```
+
+### 2-step mutants
+
+```{r}
+ggplot(
+    # filter(ls1_phen_dists_data, env_condition=="env-consta"),
+    ls2_phen_dists_data,
+    aes(
+      x=rep_id,
+      y=count_env_a,
+      fill=distance
+    )
+  ) +
+  geom_bar(position="stack", stat="identity") +
+  scale_fill_viridis(discrete=TRUE, direction=-1) +
+  facet_grid(
+    env_condition~COPY_MUT_PROB,
+    scales="free_x"
+  ) +
+  theme(
+    legend.position="bottom",
+    axis.text.x=element_text(size=10)
+  )
+ggsave(
+  paste0(working_directory, "plots/", "mutant_phen_dist_env_a_step-2.pdf"),
+  width=15,
+  height=18
 )
 ```
